# cpp_dauphine

./: .gitignore  Name.txt  README.md  environment.yml  index.html  package.json
basics/: README.md  basics.ipynb  document_JJ.txt  index.html  package.json
basics/cpp/first_program/: .CMakeLists.txt.swp  .main.cpp.swp  CMakeLists.txt  main.cpp
basics/cpp/placeholder/: CMakeLists.txt
basics/git_tutorial/: LeC.txt  Sami_Name_git_tutorial.txt  basic.txt  doc2.txt  document.txt  document2.txt  document_BELARBI.txt  document_BasileRovel.txt  document_ClemRS.txt  document_Delwasse  document_FlorianPerigne.txt  document_MABILEAU.txt  document_MH.py  document_RICCARDIZANI.txt  document_Sibony.txt  document_ThibautJerebitz.txt  document_Valentin_ROCHEREAU.txt  document_borde.txt  document_chueva.txt  document_ctorza.txt  document_hannahbis.txt  document_leroux.txt  document_raphoucs.txt  document_ribeiro.txt  document_samahtachaqourrt.txt  document_youssef.txt  flo.txt  hello.txt  hihi.txt  movies.txt  new_doc.txt  ruben-cohen.txt
basics/slides/: package.json
docs/: index.html
docs/basics/: index.html  package.json
docs/functional/: index.html  package.json
docs/pointers/: index.html  package.json
docs/polymorphism/: index.html  package.json
docs/stl/: index.html  package.json
docs/types/: index.html  package.json
exercises/chess/: CMakeLists.txt  chess_array.hpp  main.cpp
exercises/interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.hpp  interpolation_impl.cpp  interpolation_impl.hpp  main.cpp
exercises/polynomial/: CMakeLists.txt  main.cpp  polynomial.cpp  polynomial.hpp  test.cpp
functional/: README.md  index.html  package.json
functional/slides/: package.json
pointers/: README.md  index.html  package.json
pointers/cpp/: CMakeLists.txt  allocation.cpp  allocation.hpp  main.cpp  option.cpp  option.hpp  pricer.cpp  pricer.hpp  resource.cpp  resource.hpp
pointers/slides/: package.json
polymorphism/: README.md  package.json
polymorphism/cpp/: CMakeLists.txt  main.cpp  volatility.cpp  volatility.hpp
polymorphism/slides/: package.json
projects/CPP_SCORING_FX/: Bloomberg Data.txt  Bloomberg Data.xlsm  Bloomberg Data.xlsx  README.md  Results.txt  Summary Report.docx  data.csv  data.txt  data.xlsx  data_csv.csv
projects/breakeven-volatility/: breakeven-volatility.tex
projects/currency-ranking/: biblio.bib  currency-ranking.tex
projects/pde1d/: pde1d_solver.tex  superbox.sty
projects/super-replication/: bundle.tex  superbox.sty
stl/: README.md  package.json
stl/cpp/: CMakeLists.txt  additional_exercises.cpp  additional_exercises.hpp  main.cpp  printvector.cpp  printvector.hpp  vector_utils.cpp  vector_utils.hpp
stl/slides/: package.json
types/: README.md  index.html  package.json
types/cpp/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp  uvector.cpp  uvector.hpp
types/move_semantic/: CMakeLists.txt  main.cpp  resource.cpp  resource.hpp
types/slides/: package.json
(+45 files in other folders)
